@@ -2,6 +2,7 @@
 
 ==v1.1==
 
+* [#8] - Add a format to inline a bug report, e.g. {{#bugzilla:debug=1|id=661|status=*|format=inline}}
 * BUG : [#3] - Task repeated in report for tasks with multiple keywords when keywords displayed in report
 * BUG : [#5] - deadline (or any date) range matches did not work, e.g. deadline=2008-12-01:2008-12-31
 * BUG : [#6] - bugzilla query link not generated correctly for id matches, e.g. {{#bugzilla:status=*|id=1,2,3}}
